--- a/tools/fritz/src/analysishandler/.deps/fritz-AnalysisHandlerCMS_7TeV.Po
+++ b/tools/fritz/src/analysishandler/.deps/fritz-AnalysisHandlerCMS_7TeV.Po
@@ -367,7 +367,8 @@ src/analysishandler/fritz-AnalysisHandlerCMS_7TeV.o: \
  /home/shadowquark/code/checkmate/tools/analysis/include/kinematics/topness/simplex.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/kinematics/topness/topness_struct.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_7TeV/cms_1306_1126_WW.h \
- /usr/include/root/TH2F.h /usr/include/root/TH2.h
+ /usr/include/root/TH2F.h /usr/include/root/TH2.h \
+ /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_7TeV/cms_1410_6679_mumu_7.h
 
 /usr/include/stdc-predef.h:
 
@@ -1414,3 +1415,5 @@ include/global/FritzConfig.h:
 /usr/include/root/TH2F.h:
 
 /usr/include/root/TH2.h:
+
+/home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_7TeV/cms_1410_6679_mumu_7.h:
