--- a/tools/fritz/src/analysishandler/.deps/fritz-AnalysisHandlerCMS_8TeV.Po
+++ b/tools/fritz/src/analysishandler/.deps/fritz-AnalysisHandlerCMS_8TeV.Po
@@ -377,7 +377,8 @@ src/analysishandler/fritz-AnalysisHandlerCMS_8TeV.o: \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_sus_12_019.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_sus_13_016.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_exo_14_014.h \
- /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1410_6679_ee.h
+ /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1410_6679_ee.h \
+ /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1410_6679_mumu.h
 
 /usr/include/stdc-predef.h:
 
@@ -1444,3 +1445,5 @@ include/global/FritzConfig.h:
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_exo_14_014.h:
 
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1410_6679_ee.h:
+
+/home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1410_6679_mumu.h:
