--- a/tools/fritz/src/analysishandler/.deps/fritz-AnalysisHandlerCMS_13TeV.Po
+++ b/tools/fritz/src/analysishandler/.deps/fritz-AnalysisHandlerCMS_13TeV.Po
@@ -366,7 +366,8 @@ src/analysishandler/fritz-AnalysisHandlerCMS_13TeV.o: \
  /home/shadowquark/code/checkmate/tools/analysis/include/kinematics/topness/Wrappertopness.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/kinematics/topness/simplex.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/kinematics/topness/topness_struct.h \
- /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_pas_sus_15_011.h
+ /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_pas_sus_15_011.h \
+ /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h
 
 /usr/include/stdc-predef.h:
 
@@ -1409,3 +1410,5 @@ include/global/FritzConfig.h:
 /home/shadowquark/code/checkmate/tools/analysis/include/kinematics/topness/topness_struct.h:
 
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_pas_sus_15_011.h:
+
+/home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h:
