--- a/tools/fritz/src/.deps/fritz-main.Po
+++ b/tools/fritz/src/.deps/fritz-main.Po
@@ -448,6 +448,7 @@ src/fritz-main.o: src/main.cc /usr/include/stdc-predef.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1410_6679_mumu.h \
  include/analysishandler/AnalysisHandlerCMS_13TeV.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_pas_sus_15_011.h \
+ /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h \
  include/analysishandler/AnalysisHandlerCMS_14TeV_projected.h
 
 /usr/include/stdc-predef.h:
@@ -1655,5 +1656,7 @@ include/analysishandler/AnalysisHandlerCMS_8TeV.h:
 include/analysishandler/AnalysisHandlerCMS_13TeV.h:
 
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_pas_sus_15_011.h:
+
+/home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h:
 
 include/analysishandler/AnalysisHandlerCMS_14TeV_projected.h:
