--- a/tools/fritz/src/fritz/.deps/fritz-Fritz.Po
+++ b/tools/fritz/src/fritz/.deps/fritz-Fritz.Po
@@ -447,6 +447,7 @@ src/fritz/fritz-Fritz.o: src/fritz/Fritz.cc /usr/include/stdc-predef.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1410_6679_mumu.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1410_6679_mumu2j.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1606_01522_8.h \
+ /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1506_00424_8.h \
  include/analysishandler/AnalysisHandlerCMS_13TeV.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_pas_sus_15_011.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h \
@@ -1658,6 +1659,8 @@ include/analysishandler/AnalysisHandlerCMS_8TeV.h:
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1410_6679_mumu2j.h:
 
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1606_01522_8.h:
+
+/home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1506_00424_8.h:
 
 include/analysishandler/AnalysisHandlerCMS_13TeV.h:
 
