--- a/tools/fritz/src/.deps/fritz-main.Po
+++ b/tools/fritz/src/.deps/fritz-main.Po
@@ -456,6 +456,7 @@ src/fritz-main.o: src/main.cc /usr/include/stdc-predef.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1701_02032_8_4t.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1701_02032_8_2mu2b.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1701_02032_8_2mu2t.h \
+ /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1507_03268_8.h \
  include/analysishandler/AnalysisHandlerCMS_13TeV.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_pas_sus_15_011.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h \
@@ -1682,6 +1683,8 @@ include/analysishandler/AnalysisHandlerCMS_8TeV.h:
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1701_02032_8_2mu2b.h:
 
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1701_02032_8_2mu2t.h:
+
+/home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_8TeV/cms_1507_03268_8.h:
 
 include/analysishandler/AnalysisHandlerCMS_13TeV.h:
 
