--- a/tools/fritz/src/.deps/fritz-main.Po
+++ b/tools/fritz/src/.deps/fritz-main.Po
@@ -460,6 +460,7 @@ src/fritz-main.o: src/main.cc /usr/include/stdc-predef.h \
  include/analysishandler/AnalysisHandlerCMS_13TeV.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_pas_sus_15_011.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h \
+ /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08601_13.h \
  include/analysishandler/AnalysisHandlerCMS_14TeV_projected.h
 
 /usr/include/stdc-predef.h:
@@ -1691,5 +1692,7 @@ include/analysishandler/AnalysisHandlerCMS_13TeV.h:
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_pas_sus_15_011.h:
 
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h:
+
+/home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08601_13.h:
 
 include/analysishandler/AnalysisHandlerCMS_14TeV_projected.h:
