--- a/tools/fritz/src/fritz/.deps/fritz-Fritz.Po
+++ b/tools/fritz/src/fritz/.deps/fritz-Fritz.Po
@@ -459,6 +459,7 @@ src/fritz/fritz-Fritz.o: src/fritz/Fritz.cc /usr/include/stdc-predef.h \
  include/analysishandler/AnalysisHandlerCMS_13TeV.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_pas_sus_15_011.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h \
+ /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08601_13.h \
  include/analysishandler/AnalysisHandlerCMS_14TeV_projected.h \
  include/fritz/ConfigParser.h
 
@@ -1691,6 +1692,8 @@ include/analysishandler/AnalysisHandlerCMS_13TeV.h:
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_pas_sus_15_011.h:
 
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h:
+
+/home/shadowquark/code/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08601_13.h:
 
 include/analysishandler/AnalysisHandlerCMS_14TeV_projected.h:
 
