--- a/tools/fritz/src/.deps/fritz-main.Po
+++ b/tools/fritz/src/.deps/fritz-main.Po
@@ -425,6 +425,7 @@ src/fritz-main.o: src/main.cc /usr/include/stdc-predef.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_conf_2016_078.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_conf_2016_096.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1709_07703_13.h \
+ /home/shadowquark/code/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1709_07242_13.h \
  include/analysishandler/AnalysisHandlerATLAS_14TeV_projected.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/ATLAS_14TeV_HighLumi/atlas_2014_010_hl_3l.h \
  /home/shadowquark/code/checkmate/tools/analysis/include/analyses/ATLAS_14TeV_HighLumi/atlas_phys_2014_010_sq_hl.h \
@@ -1623,6 +1624,8 @@ include/analysishandler/AnalysisHandlerATLAS_13TeV.h:
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_conf_2016_096.h:
 
 /home/shadowquark/code/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1709_07703_13.h:
+
+/home/shadowquark/code/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1709_07242_13.h:
 
 include/analysishandler/AnalysisHandlerATLAS_14TeV_projected.h:
 
