--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,15 +1,18 @@
-m4trace:aclocal.m4:1390: -1- m4_include([m4/cpp11.m4])
-m4trace:aclocal.m4:1391: -1- m4_include([m4/delphes.m4])
-m4trace:aclocal.m4:1392: -1- m4_include([m4/hepmc.m4])
-m4trace:aclocal.m4:1393: -1- m4_include([m4/libtool.m4])
-m4trace:aclocal.m4:1394: -1- m4_include([m4/ltoptions.m4])
-m4trace:aclocal.m4:1395: -1- m4_include([m4/ltsugar.m4])
-m4trace:aclocal.m4:1396: -1- m4_include([m4/ltversion.m4])
-m4trace:aclocal.m4:1397: -1- m4_include([m4/lt~obsolete.m4])
-m4trace:aclocal.m4:1398: -1- m4_include([m4/madgraph.m4])
-m4trace:aclocal.m4:1399: -1- m4_include([m4/pythia.m4])
-m4trace:aclocal.m4:1400: -1- m4_include([m4/python.m4])
-m4trace:aclocal.m4:1401: -1- m4_include([m4/root.m4])
+m4trace:aclocal.m4:779: -1- AC_SUBST([am__quote])
+m4trace:aclocal.m4:779: -1- AC_SUBST_TRACE([am__quote])
+m4trace:aclocal.m4:779: -1- m4_pattern_allow([^am__quote$])
+m4trace:aclocal.m4:1474: -1- m4_include([m4/cpp11.m4])
+m4trace:aclocal.m4:1475: -1- m4_include([m4/delphes.m4])
+m4trace:aclocal.m4:1476: -1- m4_include([m4/hepmc.m4])
+m4trace:aclocal.m4:1477: -1- m4_include([m4/libtool.m4])
+m4trace:aclocal.m4:1478: -1- m4_include([m4/ltoptions.m4])
+m4trace:aclocal.m4:1479: -1- m4_include([m4/ltsugar.m4])
+m4trace:aclocal.m4:1480: -1- m4_include([m4/ltversion.m4])
+m4trace:aclocal.m4:1481: -1- m4_include([m4/lt~obsolete.m4])
+m4trace:aclocal.m4:1482: -1- m4_include([m4/madgraph.m4])
+m4trace:aclocal.m4:1483: -1- m4_include([m4/pythia.m4])
+m4trace:aclocal.m4:1484: -1- m4_include([m4/python.m4])
+m4trace:aclocal.m4:1485: -1- m4_include([m4/root.m4])
 m4trace:configure.ac:5: -1- AC_INIT([CheckMATE], [2.0.0], [daschm@uni-bonn.de])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([_AC_])
@@ -160,7 +163,7 @@ m4trace:configure.ac:5: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:6: -1- AM_INIT_AUTOMAKE
 m4trace:configure.ac:6: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.13.4])
+m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.16.1])
 m4trace:configure.ac:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:6: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -291,9 +294,6 @@ m4trace:configure.ac:8: -1- m4_pattern_allow([^DEPDIR$])
 m4trace:configure.ac:8: -1- AC_SUBST([am__include])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([am__include])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^am__include$])
-m4trace:configure.ac:8: -1- AC_SUBST([am__quote])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([am__quote])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:8: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
 m4trace:configure.ac:8: -1- AC_SUBST([AMDEP_TRUE])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([AMDEP_TRUE])
@@ -390,6 +390,7 @@ m4trace:configure.ac:12: -1- m4_pattern_allow([^CC$])
 m4trace:configure.ac:12: -1- AC_SUBST([ac_ct_CC])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([ac_ct_CC])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^ac_ct_CC$])
+m4trace:configure.ac:12: -1- AC_REQUIRE_AUX_FILE([compile])
 m4trace:configure.ac:12: -1- AC_SUBST([CCDEPMODE], [depmode=$am_cv_CC_dependencies_compiler_type])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([CCDEPMODE])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^CCDEPMODE$])
@@ -462,23 +463,23 @@ m4trace:configure.ac:12: -1- AC_SUBST([lt_ECHO])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([lt_ECHO])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^lt_ECHO$])
 m4trace:configure.ac:12: -1- LT_SUPPORTED_TAG([CC])
-m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:193: AC_LANG_CONFTEST is expanded from...
-../../lib/autoconf/general.m4:2661: _AC_LINK_IFELSE is expanded from...
-../../lib/autoconf/general.m4:2678: AC_LINK_IFELSE is expanded from...
-m4/libtool.m4:1022: _LT_SYS_MODULE_PATH_AIX is expanded from...
-m4/libtool.m4:4158: _LT_LINKER_SHLIBS is expanded from...
-m4/libtool.m4:5233: _LT_LANG_C_CONFIG is expanded from...
-m4/libtool.m4:138: _LT_SETUP is expanded from...
-m4/libtool.m4:67: LT_INIT is expanded from...
+m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:197: AC_LANG_CONFTEST is expanded from...
+../../lib/autoconf/general.m4:2670: _AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2680: AC_LINK_IFELSE is expanded from...
+m4/libtool.m4:1038: _LT_SYS_MODULE_PATH_AIX is expanded from...
+m4/libtool.m4:5225: _LT_LINKER_SHLIBS is expanded from...
+m4/libtool.m4:5310: _LT_LANG_C_CONFIG is expanded from...
+m4/libtool.m4:250: _LT_SETUP is expanded from...
+m4/libtool.m4:99: LT_INIT is expanded from...
 configure.ac:12: the top level])
-m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:193: AC_LANG_CONFTEST is expanded from...
-../../lib/autoconf/general.m4:2661: _AC_LINK_IFELSE is expanded from...
-../../lib/autoconf/general.m4:2678: AC_LINK_IFELSE is expanded from...
-m4/libtool.m4:1022: _LT_SYS_MODULE_PATH_AIX is expanded from...
-m4/libtool.m4:4158: _LT_LINKER_SHLIBS is expanded from...
-m4/libtool.m4:5233: _LT_LANG_C_CONFIG is expanded from...
-m4/libtool.m4:138: _LT_SETUP is expanded from...
-m4/libtool.m4:67: LT_INIT is expanded from...
+m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:197: AC_LANG_CONFTEST is expanded from...
+../../lib/autoconf/general.m4:2670: _AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2680: AC_LINK_IFELSE is expanded from...
+m4/libtool.m4:1038: _LT_SYS_MODULE_PATH_AIX is expanded from...
+m4/libtool.m4:5225: _LT_LINKER_SHLIBS is expanded from...
+m4/libtool.m4:5310: _LT_LANG_C_CONFIG is expanded from...
+m4/libtool.m4:250: _LT_SETUP is expanded from...
+m4/libtool.m4:99: LT_INIT is expanded from...
 configure.ac:12: the top level])
 m4trace:configure.ac:12: -1- AC_SUBST([DSYMUTIL])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([DSYMUTIL])
@@ -495,13 +496,13 @@ m4trace:configure.ac:12: -1- m4_pattern_allow([^OTOOL$])
 m4trace:configure.ac:12: -1- AC_SUBST([OTOOL64])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([OTOOL64])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^OTOOL64$])
-m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:193: AC_LANG_CONFTEST is expanded from...
-../../lib/autoconf/general.m4:2661: _AC_LINK_IFELSE is expanded from...
-../../lib/autoconf/general.m4:2678: AC_LINK_IFELSE is expanded from...
-m4/libtool.m4:4158: _LT_LINKER_SHLIBS is expanded from...
-m4/libtool.m4:5233: _LT_LANG_C_CONFIG is expanded from...
-m4/libtool.m4:138: _LT_SETUP is expanded from...
-m4/libtool.m4:67: LT_INIT is expanded from...
+m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:197: AC_LANG_CONFTEST is expanded from...
+../../lib/autoconf/general.m4:2670: _AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2680: AC_LINK_IFELSE is expanded from...
+m4/libtool.m4:5225: _LT_LINKER_SHLIBS is expanded from...
+m4/libtool.m4:5310: _LT_LANG_C_CONFIG is expanded from...
+m4/libtool.m4:250: _LT_SETUP is expanded from...
+m4/libtool.m4:99: LT_INIT is expanded from...
 configure.ac:12: the top level])
 m4trace:configure.ac:12: -1- AH_OUTPUT([HAVE_DLFCN_H], [/* Define to 1 if you have the <dlfcn.h> header file. */
 @%:@undef HAVE_DLFCN_H])
@@ -586,27 +587,27 @@ m4trace:configure.ac:12: -1- m4_pattern_allow([^CXXCPP$])
 m4trace:configure.ac:12: -1- AC_SUBST([LD])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([LD])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^LD$])
-m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:193: AC_LANG_CONFTEST is expanded from...
-../../lib/autoconf/general.m4:2661: _AC_LINK_IFELSE is expanded from...
-../../lib/autoconf/general.m4:2678: AC_LINK_IFELSE is expanded from...
-m4/libtool.m4:1022: _LT_SYS_MODULE_PATH_AIX is expanded from...
-m4/libtool.m4:5340: _LT_LANG_CXX_CONFIG is expanded from...
-m4/libtool.m4:785: _LT_LANG is expanded from...
-m4/libtool.m4:768: LT_LANG is expanded from...
-m4/libtool.m4:796: _LT_LANG_DEFAULT_CONFIG is expanded from...
-m4/libtool.m4:138: _LT_SETUP is expanded from...
-m4/libtool.m4:67: LT_INIT is expanded from...
+m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:197: AC_LANG_CONFTEST is expanded from...
+../../lib/autoconf/general.m4:2670: _AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2680: AC_LINK_IFELSE is expanded from...
+m4/libtool.m4:1038: _LT_SYS_MODULE_PATH_AIX is expanded from...
+m4/libtool.m4:6336: _LT_LANG_CXX_CONFIG is expanded from...
+m4/libtool.m4:791: _LT_LANG is expanded from...
+m4/libtool.m4:780: LT_LANG is expanded from...
+m4/libtool.m4:827: _LT_LANG_DEFAULT_CONFIG is expanded from...
+m4/libtool.m4:250: _LT_SETUP is expanded from...
+m4/libtool.m4:99: LT_INIT is expanded from...
 configure.ac:12: the top level])
-m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:193: AC_LANG_CONFTEST is expanded from...
-../../lib/autoconf/general.m4:2661: _AC_LINK_IFELSE is expanded from...
-../../lib/autoconf/general.m4:2678: AC_LINK_IFELSE is expanded from...
-m4/libtool.m4:1022: _LT_SYS_MODULE_PATH_AIX is expanded from...
-m4/libtool.m4:5340: _LT_LANG_CXX_CONFIG is expanded from...
-m4/libtool.m4:785: _LT_LANG is expanded from...
-m4/libtool.m4:768: LT_LANG is expanded from...
-m4/libtool.m4:796: _LT_LANG_DEFAULT_CONFIG is expanded from...
-m4/libtool.m4:138: _LT_SETUP is expanded from...
-m4/libtool.m4:67: LT_INIT is expanded from...
+m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:197: AC_LANG_CONFTEST is expanded from...
+../../lib/autoconf/general.m4:2670: _AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2680: AC_LINK_IFELSE is expanded from...
+m4/libtool.m4:1038: _LT_SYS_MODULE_PATH_AIX is expanded from...
+m4/libtool.m4:6336: _LT_LANG_CXX_CONFIG is expanded from...
+m4/libtool.m4:791: _LT_LANG is expanded from...
+m4/libtool.m4:780: LT_LANG is expanded from...
+m4/libtool.m4:827: _LT_LANG_DEFAULT_CONFIG is expanded from...
+m4/libtool.m4:250: _LT_SETUP is expanded from...
+m4/libtool.m4:99: LT_INIT is expanded from...
 configure.ac:12: the top level])
 m4trace:configure.ac:15: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
 m4trace:configure.ac:15: -1- m4_pattern_allow([^STDC_HEADERS$])
@@ -626,7 +627,7 @@ m4trace:configure.ac:18: -1- AC_DEFINE_TRACE_LITERAL([HAVE_FSTREAM])
 m4trace:configure.ac:18: -1- m4_pattern_allow([^HAVE_FSTREAM$])
 m4trace:configure.ac:23: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:207: AC_HELP_STRING is expanded from...
-m4/hepmc.m4:2: THEPEG_CHECK_HEPMC is expanded from...
+m4/hepmc.m4:50: THEPEG_CHECK_HEPMC is expanded from...
 configure.ac:23: the top level])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_HEPMC_HEPMCDEFS_H], [/* Define to 1 if you have the <HepMC/HepMCDefs.h> header file. */
 @%:@undef HAVE_HEPMC_HEPMCDEFS_H])
@@ -662,15 +663,15 @@ m4trace:configure.ac:23: -1- AC_SUBST_TRACE([LOAD_HEPMC])
 m4trace:configure.ac:23: -1- m4_pattern_allow([^LOAD_HEPMC$])
 m4trace:configure.ac:24: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:207: AC_HELP_STRING is expanded from...
-m4/pythia.m4:2: CHECK_PYTHIA is expanded from...
+m4/pythia.m4:72: CHECK_PYTHIA is expanded from...
 configure.ac:24: the top level])
 m4trace:configure.ac:24: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:207: AC_HELP_STRING is expanded from...
-m4/pythia.m4:2: CHECK_PYTHIA is expanded from...
+m4/pythia.m4:72: CHECK_PYTHIA is expanded from...
 configure.ac:24: the top level])
 m4trace:configure.ac:24: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:207: AC_HELP_STRING is expanded from...
-m4/pythia.m4:2: CHECK_PYTHIA is expanded from...
+m4/pythia.m4:72: CHECK_PYTHIA is expanded from...
 configure.ac:24: the top level])
 m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_PYTHIA8_PYTHIA_H], [/* Define to 1 if you have the <Pythia8/Pythia.h> header file. */
 @%:@undef HAVE_PYTHIA8_PYTHIA_H])
@@ -760,8 +761,8 @@ m4trace:configure.ac:27: -1- AC_SUBST_TRACE([pkgpyexecdir])
 m4trace:configure.ac:27: -1- m4_pattern_allow([^pkgpyexecdir$])
 m4trace:configure.ac:28: -1- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:207: AC_HELP_STRING is expanded from...
-../../lib/autoconf/general.m4:1481: AC_ARG_WITH is expanded from...
-m4/root.m4:36: ROOT_PATH is expanded from...
+../../lib/autoconf/general.m4:1490: AC_ARG_WITH is expanded from...
+m4/root.m4:105: ROOT_PATH is expanded from...
 configure.ac:28: the top level])
 m4trace:configure.ac:28: -1- AC_SUBST([ROOTCONF])
 m4trace:configure.ac:28: -1- AC_SUBST_TRACE([ROOTCONF])
@@ -822,7 +823,7 @@ m4trace:configure.ac:35: -1- AC_SUBST_TRACE([LD_RUN_PATH])
 m4trace:configure.ac:35: -1- m4_pattern_allow([^LD_RUN_PATH$])
 m4trace:configure.ac:36: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:207: AC_HELP_STRING is expanded from...
-m4/delphes.m4:2: CHECK_DELPHES is expanded from...
+m4/delphes.m4:38: CHECK_DELPHES is expanded from...
 configure.ac:36: the top level])
 m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_CLASSES_DELPHESCLASSES_H], [/* Define to 1 if you have the <classes/DelphesClasses.h> header file. */
 @%:@undef HAVE_CLASSES_DELPHESCLASSES_H])
@@ -851,10 +852,10 @@ m4trace:configure.ac:36: -1- AC_SUBST_TRACE([DELPHESLIBDIR])
 m4trace:configure.ac:36: -1- m4_pattern_allow([^DELPHESLIBDIR$])
 m4trace:configure.ac:37: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:207: AC_HELP_STRING is expanded from...
-m4/madgraph.m4:2: CHECK_MADGRAPH is expanded from...
+m4/madgraph.m4:28: CHECK_MADGRAPH is expanded from...
 configure.ac:37: the top level])
-m4trace:configure.ac:37: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2777: AC_CHECK_FILE is expanded from...
-m4/madgraph.m4:2: CHECK_MADGRAPH is expanded from...
+m4trace:configure.ac:37: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2791: AC_CHECK_FILE is expanded from...
+m4/madgraph.m4:28: CHECK_MADGRAPH is expanded from...
 configure.ac:37: the top level])
 m4trace:configure.ac:37: -1- AM_CONDITIONAL([HAVE_MADGRAPH], [test "x$with_madgraph" != "xno"])
 m4trace:configure.ac:37: -1- AC_SUBST([HAVE_MADGRAPH_TRUE])
@@ -868,7 +869,7 @@ m4trace:configure.ac:37: -1- _AM_SUBST_NOTMAKE([HAVE_MADGRAPH_FALSE])
 m4trace:configure.ac:37: -1- AC_SUBST([MADGRAPHDIR])
 m4trace:configure.ac:37: -1- AC_SUBST_TRACE([MADGRAPHDIR])
 m4trace:configure.ac:37: -1- m4_pattern_allow([^MADGRAPHDIR$])
-m4trace:configure.ac:47: -1- AC_CONFIG_FILES([Makefile
+m4trace:configure.ac:49: -1- AC_CONFIG_FILES([Makefile
                  tools/analysis/Makefile
                  tools/fritz/Makefile])
 m4trace:configure.ac:50: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
