--- a/tools/fritz/src/analysishandler/.deps/fritz-AnalysisHandlerCMS_13TeV.Po
+++ b/tools/fritz/src/analysishandler/.deps/fritz-AnalysisHandlerCMS_13TeV.Po
@@ -373,7 +373,8 @@ src/analysishandler/fritz-AnalysisHandlerCMS_13TeV.o: \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_sus_16_025.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_sus_16_048.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h \
- /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08601_13.h
+ /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08601_13.h \
+ /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08908.h
 
 /usr/include/stdc-predef.h:
 
@@ -1430,3 +1431,5 @@ include/global/FritzConfig.h:
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h:
 
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08601_13.h:
+
+/home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08908.h:
