--- a/tools/fritz/src/.deps/fritz-main.Po
+++ b/tools/fritz/src/.deps/fritz-main.Po
@@ -439,6 +439,7 @@ src/fritz-main.o: src/main.cc /usr/include/stdc-predef.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1706_03731.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1709_07703_13.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1709_07242_13.h \
+ /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1712_02304.h \
  include/analysishandler/AnalysisHandlerATLAS_14TeV_projected.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_14TeV_HighLumi/atlas_2014_010_hl_3l.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_14TeV_HighLumi/atlas_phys_2014_010_sq_hl.h \
@@ -480,6 +481,7 @@ src/fritz-main.o: src/main.cc /usr/include/stdc-predef.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1701_02042.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08601_13.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08908.h \
+ /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1711_00431.h \
  include/analysishandler/AnalysisHandlerCMS_14TeV_projected.h
 
 /usr/include/stdc-predef.h:
@@ -1670,6 +1672,8 @@ include/analysishandler/AnalysisHandlerATLAS_13TeV.h:
 
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1709_07242_13.h:
 
+/home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1712_02304.h:
+
 include/analysishandler/AnalysisHandlerATLAS_14TeV_projected.h:
 
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_14TeV_HighLumi/atlas_2014_010_hl_3l.h:
@@ -1751,5 +1755,7 @@ include/analysishandler/AnalysisHandlerCMS_13TeV.h:
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08601_13.h:
 
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08908.h:
+
+/home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1711_00431.h:
 
 include/analysishandler/AnalysisHandlerCMS_14TeV_projected.h:
