--- a/tools/fritz/src/.deps/fritz-main.Po
+++ b/tools/fritz/src/.deps/fritz-main.Po
@@ -482,6 +482,7 @@ src/fritz-main.o: src/main.cc /usr/include/stdc-predef.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08601_13.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08908.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1711_00431.h \
+ /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1801_01846.h \
  include/analysishandler/AnalysisHandlerCMS_14TeV_projected.h
 
 /usr/include/stdc-predef.h:
@@ -1757,5 +1758,7 @@ include/analysishandler/AnalysisHandlerCMS_13TeV.h:
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1709_08908.h:
 
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1711_00431.h:
+
+/home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1801_01846.h:
 
 include/analysishandler/AnalysisHandlerCMS_14TeV_projected.h:
