--- a/tools/fritz/src/.deps/fritz-main.Po
+++ b/tools/fritz/src/.deps/fritz-main.Po
@@ -655,6 +655,7 @@ src/fritz-main.o: src/main.cc /usr/include/stdc-predef.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1806_04771.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1805_04865.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1807_02048.h \
+ /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1807_07799.h \
  include/analysishandler/AnalysisHandlerCMS_14TeV_projected.h
 
 /usr/include/stdc-predef.h:
@@ -2130,5 +2131,7 @@ include/analysishandler/AnalysisHandlerCMS_13TeV.h:
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1805_04865.h:
 
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1807_02048.h:
+
+/home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/CMS_13TeV/cms_1807_07799.h:
 
 include/analysishandler/AnalysisHandlerCMS_14TeV_projected.h:
